reserve actionOutput for user actions on the executor